--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>common-utils</module>
         <module>web-api</module>
         <module>stream-exercise</module>
+        <module>Predicate-Demo</module>
     </modules>
 
     <groupId>com.personal</groupId>
