impl Oauth2 client and server intergrate

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>array-exercis</module>
         <module>security-Oauth2 Demo</module>
         <module>spring-keycloak-demo</module>
+        <module>oauth2-client-server-intergrate-springboot</module>
     </modules>
 
     <groupId>com.personal</groupId>
