--- a/spring-keycloak-demo/src/main/resources/application.yml
+++ b/spring-keycloak-demo/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 server:
   port: 9091
+
 spring:
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8080/realms/master
-          jwk-set-uri: http://localhost:8080/realms/master/protocol/openid-connect/certs
+          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/realms/master/protocol/openid-connect/certs
 
 logging:
   level:
@@ -19,3 +20,11 @@ jwt:
     converter:
       resource-id: demo
       principle-attribute: preferred_username
+
+keycloak:
+  server-url: http://localhost:8080
+  realm: master
+  client-id: demo
+  admin:
+    username:  KeyClock
+    password: P@ssw0rd()KeyClock
