--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
         <module>common-utils</module>
         <module>web-api</module>
         <module>stream-exercise</module>
+        <module>Predicate-Demo</module>
+        <module>array-exercis</module>
+        <module>security-Oauth2 Demo</module>
+        <module>spring-keycloak-demo</module>
+        <module>oauth2-client-server-intergrate-springboot</module>
+        <module>jpaSpecification</module>
     </modules>
 
     <groupId>com.personal</groupId>
